<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".RegisterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/employee_id"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/emplid"
            tools:text="@string/emplid" />

        <EditText
            android:id="@+id/id_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/emplid"
            android:inputType="textCapCharacters" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Name"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/username" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Email"
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_email" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textWebEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_gender" />

        <RadioGroup
            android:id="@+id/gender_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AccessCode"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/acc_code" />

        <EditText
            android:id="@+id/code_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/acc_code"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirm"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirmation"
            tools:text="confirm" />

        <EditText
            android:id="@+id/confirmation_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/acc_code"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Department"
            android:layout_width="364dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/department" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/departmentList"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/terms"
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/agree" />

        <CheckBox
            android:id="@+id/agree_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="208dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/submit_reset"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>
</LinearLayout>